<resources>
    <string name="account">账号</string>
    <string name="account_hint">手机号/邮箱/用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">账号注册</string>
    <string name="thirdparty">第三方登录</string>
    <string name="account_cannot_null">账号不能为空</string>
    <string name="password_cannot_null">密码不能为空</string>
    <string name="year">年</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="home_page">首页</string>
    <string name="message">信息</string>
    <string name="mine">我的</string>
    <string name="no_more">没有更多数据啦~</string>
    <string name="loading">正在加载...</string>
    <string name="no_content">没有内容~</string>


    <string name="history_view">历史浏览</string>
    <string name="follow">关注</string>
    <string name="my_fans">粉丝</string>
    <string name="followed">已关注</string>
    <string name="zan_comment_wrap">%s 查看\t\t %s 评论</string>
    <string name="professional_client">最专业的第三方CSDN客户端</string>
    <string name="history">历史</string>

    <string name="setting">设置</string>
    <string name="commentLeaveMessage">评论留言</string>
    <string name="collection">收藏</string>
    <string name="systemNotify">系统通知</string>
    <string name="share">分享</string>
    <string name="share_to">分享到：</string>
    <string name="write_suggest">请写下您的意见或建议…</string>
    <string name="file_your_mobile">填写您的手机或邮箱</string>
    <string name="commit">提交</string>
    <string name="feedback_failed">反馈失败</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_success">反馈成功</string>
    <string name="blogNumWrap">%s\n博客</string>
    <string name="collect">收藏</string>
    <string name="collectWrap">%d\n收藏</string>
    <string name="idolWrap">%s\n关注</string>
    <string name="my_idol">关心</string>
    <string name="blog">博客</string>
    <string name="category">分类</string>
    <string name="history_search">历史搜索</string>
    <string name="cancel">取消</string>
    <string name="search_recommand">搜索推荐</string>
    <string name="ai">人工智能</string>
    <string name="link_quote">区块链</string>
    <string name="alorthim">算法</string>
    <string name="face_recognize">人脸识别</string>
    <string name="clear">清空</string>
    <string name="input_title">输入标题</string>
    <string name="share_your_origin">分享你的原创…</string>
    <string name="action_undo">撤销</string>
    <string name="action_redo">重做</string>
    <string name="action_preview">预览</string>
    <string name="deploy_title">发布</string>
    <string name="append_desc">[添加链接描述](http://www.baidu.com)</string>
    <string name="send">发送</string>
    <string name="input_phonenum">输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="reset_pwd_first">重置密码(1/3)</string>
    <string name="phonenum_cannot_null">手机号不能为空</string>
    <string name="invalid_phonenum">手机号不对哦~</string>
    <string name="verifyPhoneNum">验证手机号</string>
    <string name="messageCode">短信验证码</string>
    <string name="reset_pwd_2">重置密码(2/3)</string>
    <string name="verifyCodeSended">短信验证码已发送至</string>
    <string name="resend">重新发送</string>
    <string name="reset_pwd_3">重置密码(3/3)</string>
    <string name="newLoginPwd">新登录密码</string>
    <string name="pwd_valid_format">密码需为8～20位数字、英文和符号的组合，不含空格。</string>
    <string name="scan_code_register">扫描二维码注册</string>
    <string name="thirdlogin">第三方登录</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_success">取消成功</string>
    <string name="digg_success">点赞成功</string>
    <string name="digg_failed">点赞失败</string>
    <string name="cancel_digg">取消点赞</string>
    <string name="all_comment_wrap">全部评论(%d)</string>
    <string name="reply">回复</string>
    <string name="comment_success">评论成功</string>
    <string name="write_comment">写评论..</string>
    <string name="loging">正在登录...</string>
    <string name="rankWrap">排名\n%s</string>
    <string name="clear_cache">清理缓存</string>
    <string name="loginOut">退出登录</string>
    <string name="clear_success">清理成功</string>
    <string name="clear_failed">清理失败</string>
    <string name="no_cache">当前没有缓存可以清理</string>
    <string name="article_label">文章标签</string>
    <string name="person_category">个人分类</string>
    <string name="edit">编辑</string>
    <string name="please_select">请选择</string>
    <string name="private_article">私密文章</string>
    <string name="confirm_wrap">确定添加(%d/5)</string>
    <string name="origin">原创</string>
    <string name="reprint">转载</string>
    <string name="translate">翻译</string>
    <string name="article_category">文章类型</string>
    <string name="blog_category">博客类型</string>
    <string name="preview">预览</string>
    <string name="not_select_article_tag">你还没有选择文章的标签哦</string>
    <string name="not_select_personal_tag">你还没有选择个人分类</string>
    <string name="not_select_blog_category">你还没有选择博客分类</string>
    <string name="not_select_article_category">你还没有选择文章类型</string>
    <string name="write_something">先写点内容，再进入下一步吧</string>
    <string name="title_cannot_null">标题不能为空</string>
    <string name="publicStr">公开</string>
    <string name="privateStr">私密</string>
    <string name="login_first">发布博客使用的网页端接口，需要先在网页登录</string>
    <string name="get_cookie_success">获取cookie成功</string>
    <string name="not_login_yet">你还没有登录</string>
    <string name="delpoy_success">发布成功</string>
    <string name="deploy_failed">发布失败</string>
    <string name="write_article">创作</string>
    <string name="no_comment_yet">暂时还没有评论哦</string>
    <string name="wait_for">消息功能还在等CSDN开放接口</string>
    <string name="donate">捐赠</string>


    <string-array name="tab_name">
        <item>关注</item>
        <item>移动</item>
        <item>前端</item>
        <item>游戏</item>
        <item>推荐</item>
        <item>物联</item>
        <item>架构</item>
    </string-array>
    <string-array name="tab_key">
        <item>watchers</item>
        <item>mobile</item>
        <item>web</item>
        <item>game</item>
        <item>newarticles</item>
        <item>iot</item>
        <item>arch</item>
    </string-array>


    <string-array name="blog_category">
        <item>关注</item>
        <item>移动</item>
        <item>前端</item>
        <item>游戏</item>
        <item>物联</item>
        <item>架构</item>
        <item>音视频开发</item>
        <item>后端</item>
        <item>数据库开发</item>
        <item>研发管理</item>
        <item>运维</item>
        <item>云计算/大数据</item>
    </string-array>

    <string-array name="scores">
        <item>0</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>350</item>
        <item>400</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forum">论坛</string>
    <string name="comment">评论</string>
    <!--<string name="reply">回复</string>-->
    <string name="report">举报</string>
    <string name="digg">赞</string>
    <string name="floor">楼</string>
    <string name="floor_owner">楼主</string>
    <string name="comment_cannot_null">评论内容不能为空</string>
    <string name="comment_too_short">评论不能少于十个字</string>
    <string name="select_module">选择版块</string>
    <string name="select_score">选择分数</string>
    <string name="deploy_forum">发帖</string>
    <string name="search_no_result">没有搜索到内容</string>
    <string name="create_forum_success">发帖成功</string>
    <string name="forum_title_cannot_null">帖子标题不能为空</string>
    <string name="forum_content_cannot_null">帖子内容不能为空</string>
    <string name="forum_score_must_select">你还没有选择分数</string>
    <string name="exit_str">再按一次退出应用</string>
    <string name="login_success">登录成功</string>
    <string name="get_profile">正在获取个人信息...</string>
    <string name="load_category">正在加载分类...</string>
    <string name="confirm">确认</string>
    <string name="input_hint">在这里输入...</string>
    <string name="input_prefill"></string>
    <string name="create_category_success">新建成功</string>
    <string name="create_personal_category">新建个人分类</string>
    <string name="please_login_first">请先登录 </string>
    <string name="joingroup">进入组织</string>
    <string name="tech_change_world">技术改变世界</string>
    <string name="create_article">创作文章</string>
    <string name="create">创作</string>
    <string name="get_userinfo_error">获取用户信息错误，请重新登录试试吧</string>
    <string name="pwd_hint">11-20位数字字母组合密码</string>
    <string name="input_verify_code">请输入收到的验证码</string>
    <string name="find_pwd">找回</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="login_timeout">登陆状态已失效,重新登录吧</string>
    <string name="fanswrap">%s\n粉丝</string>


    <string-array name="forum_key">
        <item>技术</item>
        <item>生活</item>
    </string-array>


    <string-array name="forum_value">
        <item>tech</item>
        <item>nontech</item>
    </string-array>


    <string-array name="forum_reports">
        <item>其他</item>
        <item>色情</item>
        <item>政治</item>
        <item>广告</item>
        <item>招聘</item>
        <item>刷屏</item>
        <item>刷分</item>
        <item>灌水</item>
        <item>骂人</item>
        <item>跑题</item>
        <item>更正</item>
    </string-array>

</resources>
