<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@mipmap/ic_logo"
        />

    <RelativeLayout
        android:id="@+id/relayout_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="105dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/InputKeyStyle"
                android:layout_width="27dp"
                android:layout_height="19dp"
                android:text="@string/account"
                />

            <EditText
                android:id="@+id/accountEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:text="wuyihua86@gmail.com"
                android:hint="@string/account_hint"
                android:textSize="13sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/colorDivider"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/passwordRelayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/passwordTv"
                style="@style/InputKeyStyle"
                android:layout_width="27dp"
                android:layout_height="19dp"
                android:layout_centerVertical="true"
                android:text="@string/password"
                />

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tv_account"
                android:background="@null"
                android:hint="@string/password_hint"
                android:text="a7681810810"
                android:textSize="13sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/colorDivider"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="45dp"
            android:layout_height="16dp"
            android:text="@string/register_account"
            android:textColor="#ff468eff"
            android:textSize="11sp"
            />


        <TextView
            android:id="@+id/forgetPasswordTv"
            android:layout_width="45dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textColor="#ff666666"
            android:textSize="11sp"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/loginBtn"
        style="@style/LoginBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:enabled="false"
        android:text="@string/login"
        />


    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">


        <ImageView
            android:id="@+id/qqIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="invisible"
            android:layout_marginBottom="40dp"
            android:src="@mipmap/ic_qq"/>

        <ImageView
            android:id="@+id/sinaIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:src="@mipmap/ic_sina"/>

        <ImageView
            android:id="@+id/wechatIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_wechat"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/sinaIv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"
            android:text="@string/thirdparty"/>

    </RelativeLayout>

</LinearLayout>
