<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/searhbarColor"
    android:orientation="vertical"
    tools:context=".activity.FeedbackActivity">


    <include layout="@layout/layout_toolbar"/>

    <EditText
        android:id="@+id/contentEt"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="5dp"
        android:background="@color/whiteColor"
        android:gravity="top"
        android:hint="@string/write_suggest"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:textSize="12sp"/>


    <EditText
        android:id="@+id/mailEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="5dp"
        android:background="@color/whiteColor"
        android:hint="@string/file_your_mobile"
        android:paddingLeft="5dp"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/commitBtn"
        style="@style/LoginBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="47dp"
        android:layout_marginRight="16dp"
        android:enabled="false"
        android:text="@string/commit"
        />


</LinearLayout>