<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>


    <TextView
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:text="@string/reset_pwd_3"
        android:textColor="#ff333333"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPwdTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/forwardIv"
            >

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/newLoginPwd"
                android:textColor="#ff333333"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>



        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

    </RelativeLayout>
    <TextView
        android:layout_width="248dp"
        android:layout_marginLeft="16dp"
        android:layout_height="14dp"
        android:layout_below="@+id/newPwdTextLayout"
        android:layout_marginTop="12dp"
        android:text="@string/pwd_valid_format"
        android:textColor="#ff999999"
        android:textSize="10sp"
        />


    <Button
        android:id="@+id/nextStepBtn"
        style="@style/LoginBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginRight="16dp"
        android:text="@string/next_step"/>
</LinearLayout>
