<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>


    <TextView
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:text="@string/verifyPhoneNum"
        android:textColor="#ff333333"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/phoneTipTv"
        android:layout_width="185dp"
        android:layout_height="17dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="#ff999999"
        android:textSize="12sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/forwardIv"
            >

            <EditText
                android:id="@+id/verifyCodeEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/messageCode"
                android:textColor="#FF999999"
                android:textSize="12sp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/countDownTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:text="59s"
            android:textColor="#ff999999"
            android:textSize="12sp"
            />

        <include
            layout="@layout/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

    </RelativeLayout>


    <Button
        android:id="@+id/nextStepBtn"
        style="@style/LoginBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginRight="16dp"
        android:text="@string/next_step"/>
</LinearLayout>
